# XC9500

./: .gitignore  .gitmodules  README.md
bitstream/: CURRENT_IDEAS.md  README.md  database.json  devices.json  devices.txt  mapgen.py
bitstream/examples/: XC9572XL-TQ100.jed
bitstream/fusemaps/: XC95144XL-117.csv  XC95144XL-81.csv  XC9536XL-34.csv  XC9536XL-36.csv  XC9572XL-34.csv  XC9572XL-38.csv  XC9572XL-52.csv  XC9572XL-72.csv
bitstream/fuzz/: .gitignore  analyze.py  basic_io.py  basic_pterms.pkl  bitstream.py  database.py  example.py  html_dump.py  imux.json  io.py  ise.py  jed.py  jedec_parser.py  latch.py  map_mcs.py  parse_chp.py  passthrough_xor_full.py  run_fuzzers.py  switch.py  util.py
bitstream/fuzz/database/: and_xc9536xl-5-VQ64.json  basic_xc9536xl-5-VQ64.json  feedback_new_xc9536xl-5-VQ64.json  feedback_xc9536xl-5-VQ64.json  feedbackxc95288xl-6-FG256.json  xc95288xl-6-FG256.json  xc9536xl-5-VQ64.json  xc9572xl-5-TQ100.json
bitstream/fuzz/fuzzers/: constant_output.py  macrocell.py  passthrough.py  usercode.py
bitstream/fuzz/fuzzers_old/: constant_output.py  empty.py  io.py  passthrough.py  passthrough_and_3_combinations.py  passthrough_and_full.py  passthrough_and_many.py  passthrough_feedback.py  passthrough_full.py
bitstream/fuzz/infra/: bitstream.py  html_dump.py  ise.py  jed.py  util.py
bitstream/fuzz/jed/: Cargo.toml
bitstream/fuzz/jed/src/: lib.rs  main.rs
bitstream/fuzz/xc95dddXL/: Cargo.toml
bitstream/fuzz/xc95dddXL/src/: bitstream.rs  database.rs  lib.rs  main.rs
